--- a/index.css
+++ b/index.css
@@ -1,10 +1,13 @@
 .header{
+    height: 80px;
     display: flex;
     justify-content: space-between;
     border: 1px solid black;
+    font-size: 20px;
     .logo{
+        margin: 10% 10% 10% 10%;
         width: 100px;
-        height: 50px;
+        height: 80%;
     }
     .nav-items{
         /* padding: 0px 20px; */
@@ -12,7 +15,7 @@
             display: flex;
             list-style-type: none;
             li {
-                padding: 5px;
+                padding: 15px;
                 color: Blue;
                 /* margin: 10px; */
             }
@@ -23,17 +26,22 @@
 .res-container{
     /* border: 2px solid black; */
     display: flex;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 .res-card{
+    padding: 5px 5px 5px 5px;
+    background-color: #f0f0f0;
     margin-left: 5px;
-    border: 1px solid blue;
+    margin-top: 5px;
+    /* border: 1px solid blue; */
     width: 200px;
-    height: 300px;
+    height: 350px;
     .res-logo{
         width: 95%;
         height: 50%;
-        margin: 5px;
+        margin: 7px;
         margin-left: 3px;
         border: 1px solid brown;
     }
@@ -42,7 +50,20 @@
     }
 }
 
-.filter-btn{
-    float: right;
+
+.login-btn{
+    height: 100%;
+    width: 80px;
+    background-color: rgb(177, 235, 216);
+    border-radius: 5px;
+}
+
+.cuisines{
+    text-wrap: wrap;
+    word-break: break-all;
+}
+
+.body{
+    padding-top: 10px ;
 }
 
